# seer-demo

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  run.sh
client/: Cargo.toml  config.rs  helpers.rs  setup_flow.rs
client/src/: config.rs  helpers.rs  instructions.rs  lib.rs  main.rs  utils.rs
programs/crowdfund/: Cargo.toml
programs/crowdfund/src/: lib.rs
programs/manager/: Cargo.toml
programs/manager/src/: lib.rs  nft_instruction.rs  state.rs  treasury_instruction.rs
programs/nftminter/: Cargo.toml
programs/nftminter/src/: lib.rs  state.rs
programs/treasury/: Cargo.toml
programs/treasury/src/: lib.rs  state.rs
