[package]
name = "client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solana-client = "2.2.0"
solana-sdk = "2.2.0"
solana-program = "2.2.0"
tokio = "1.47.1"
borsh = "1.5.7"
spl-token = "6.0"
spl-associated-token-account = "4.0"
manager = { path = "../programs/manager" }
nftminter = { path = "../programs/nftminter" }
treasury = { path = "../programs/treasury" }
