[package]
name = "client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solana-program = { version = "3.0.0", default-features = false }
solana-pubkey = { version = "3.0.0", default-features = false }
solana-keypair = "3.0.1"
solana-transaction = "3.0.1"
tokio = "1.47.1"
spl-token = "6.0"
manager = { path = "../programs/manager" }
nftminter = { path = "../programs/nftminter" }
solana-program-test = { path = "../../agave/program-test" }
solana-program-binaries = { path = "../../agave/program-binaries", version = "=3.1.0" }
seer = { path = "../../agave/seer" }
solana-system-program = { path = "../../agave/programs/system", version = "=3.1.0" }
borsh = { version = "1.5.7", features = ["derive", "unstable__schema"] }
spl-associated-token-account-interface = { version = "2.0.0", features = [
    "borsh",
] }
solana-rent = "3.0.0"
